# teleliter

./: .gitignore  CMakeLists.txt  README.md
.agent/workflows/: chat-loading.md
.github/workflows/: release.yml
doc/: DESIGN.md  VIRTUALIZED_CHAT.md
src/: FileDropTarget.cpp  FileDropTarget.h  MainFrame.cpp  MainFrame.h  MediaPopup.cpp  MediaPopup.h  TelegramClient.cpp  TelegramClient.h  TransferManager.h  WelcomeChat.cpp  WelcomeChat.h  main.cpp
src/telegram/: TelegramClient.cpp  TelegramClient.h  TransferManager.cpp  TransferManager.h  TransferTypes.h  Types.h
src/ui/: App.cpp  App.h  ChatArea.cpp  ChatArea.h  ChatListWidget.cpp  ChatListWidget.h  ChatViewWidget.cpp  ChatViewWidget.h  FFmpegPlayer.cpp  FFmpegPlayer.h  FileDropTarget.cpp  FileDropTarget.h  FileUtils.cpp  FileUtils.h  InputBoxWidget.cpp  InputBoxWidget.h  LottiePlayer.cpp  LottiePlayer.h  MainFrame.cpp  MainFrame.h  MediaPopup.cpp  MediaPopup.h  MediaTypes.h  MenuIds.h  MessageFormatter.cpp  MessageFormatter.h  ServiceMessageLog.cpp  ServiceMessageLog.h  StatusBarManager.cpp  StatusBarManager.h  Theme.h  UserInfoPopup.cpp  UserInfoPopup.h  VirtualizedChatWidget.cpp  VirtualizedChatWidget.h  WebmPlayer.cpp  WebmPlayer.h  WelcomeChat.cpp  WelcomeChat.h
